@startuml
' Ocultar el ícono de clase para estilo DER
hide circle

' Líneas ortogonales para mayor orden
skinparam linetype ortho

entity "sexes" {
  * id : int
  --
  * name : varchar
}

entity "users" {
  * id : uuid <<PK>>
  --
  * sex_id : int <<FK>>
  * role : varchar
  * email : varchar
  * first_name : varchar
  * last_name : varchar
  phone : varchar
  photo_url : varchar
  latitude : decimal
  longitude : decimal
}

entity "clients" {
  * id : int
  --
  * user_id : uuid <<FK>>
  address : text
  * identity_document : varchar
}

entity "veterinarians" {
  * id : int
  --
  * user_id : uuid <<FK>>
  * license_number : varchar
  years_experience : int
  default_appointment_duration_minutes : int
}

entity "species" {
  * id : int
  --
  * name : varchar
  is_exotic : boolean
}

entity "breeds" {
  * id : int
  --
  * species_id : int <<FK>>
  * name : varchar
  description : text
  reference_image_url : varchar
}

entity "pets" {
  * id : int
  --
  * client_id : int <<FK>>
  * breed_id : int <<FK>>
  * sex_id : int <<FK>>
  * name : varchar
  birth_date : date
  current_weight : decimal
  photo_url : varchar
}

entity "specialties" {
  * id : int
  --
  * name : varchar
  description : text
  icon_url : varchar
}

entity "consultations" {
  * id : int
  --
  * pet_id : int <<FK>>
  * veterinarian_id : int <<FK>>
  * status : varchar
  * consultation_date : date
  * consultation_time : time
  * reason : text
  diagnosis : text
  is_contagious : boolean
  prescribed_treatment : text
  integrity_hash : varchar
  rating : int
  review_comment : text
  review_datetime : datetime
}

entity "veterinarian_availability" {
  * id : int
  --
  * veterinarian_id : int <<FK>>
  * day_of_week : int
  * start_time : time
  * end_time : time
  slot_duration_minutes : int
  is_active : boolean
}

entity "consultation_documents" {
  * id : int
  --
  * consultation_id : int <<FK>>
  * file_url : varchar
  document_type : varchar
}

entity "consultation_specialties" {
  * consultation_id : int <<FK>>
  * specialty_id : int <<FK>>
}

' --- NUEVAS TABLAS ---

entity "medication_schedules" {
  * id : int
  --
  * consultation_id : int <<FK>>
  * medication_name : varchar
  * dose : varchar
  * frequency_hours : int
  * start_datetime : datetime
  * end_datetime : datetime
  created_by_trigger : boolean
}

entity "treatment_adherence" {
  * id : int
  --
  * medication_schedule_id : int <<FK>>
  * client_id : int <<FK>>
  * scheduled_datetime : datetime
  confirmed_at : datetime
  status : varchar
}

entity "epidemiological_alerts" {
  * id : int
  --
  * consultation_id : int <<FK>>
  * disease_name : varchar
  * origin_latitude : decimal
  * origin_longitude : decimal
  * radius_km : decimal
  * active : boolean
  * created_at : datetime
  resolved_at : datetime
}

entity "morphological_records" {
  * id : int
  --
  * pet_id : int <<FK>>
  * photo_url : varchar
  * recorded_at : date
  weight_grams : decimal
  length_cm : decimal
  notes : text
}

entity "legal_documents" {
  * id : int
  --
  * pet_id : int <<FK>>
  * document_type : varchar
  * file_url : varchar
  * issued_by : varchar
  * issued_date : date
  cites_appendix : varchar
  notes : text
}

' Relaciones de Autenticación y Perfil Único
sexes ||--o{ users
sexes ||--o{ pets
users ||--o| clients
users ||--o| veterinarians

' Relaciones del Catálogo de Animales
species ||--o{ breeds
breeds ||--o{ pets
clients ||--o{ pets

' Relaciones de Consultas Médicas
pets ||--o{ consultations
veterinarians ||--o{ consultations
veterinarians ||--o{ veterinarian_availability
consultations ||--o{ consultation_documents
consultations ||--o{ consultation_specialties
specialties ||--o{ consultation_specialties

' Nuevas relaciones
consultations ||--o{ medication_schedules
medication_schedules ||--o{ treatment_adherence
clients ||--o{ treatment_adherence
consultations ||--o| epidemiological_alerts
pets ||--o{ morphological_records
pets ||--o{ legal_documents

@enduml